# edegal-hs

./: Edegal.cabal  README.md
Web/Edegal/Models/: Album.hs  Breadcrumb.hs  Media.hs  Path.hs  Picture.hs  Subalbum.hs
Web/Edegal/Server/: Api.hs  Main.hs  MediaManager.hs
Web/Edegal/Server/Importers/: Filesystem.hs
Web/Edegal/Server/MetadataBackends/: Base.hs  InMemory.hs  TransactionalMemory.hs
Web/Edegal/Server/StorageBackends/: Base.hs  LocalFilesystem.hs
