Name:           Edegal
Version:        0.0
Cabal-Version:  >= 1.2
License:        MIT
Author:         Santtu Pajukanta
Synopsis:       Some Haskell experiments around the Edegal image gallery
Build-Type:     Simple

Executable edegal
  Build-Depends: base
               , aeson >= 0.7
               , bytestring >= 0.10
               , containers >= 0.5
               , mtl >= 2.1
               , scotty >= 0.7
               , stm >= 2.4
               , text >= 0.11
  Main-Is:       Web/Edegal/Server/Main.hs
